Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, quidem ut. Harum iste minima, vel eaque nemo neque nesciunt obcaecati saepe voluptatibus, illum repudiandae enim aliquid, ab accusantium quam voluptas!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt incidunt unde quam debitis eius, animi iure facere, sit doloremque reiciendis sed? Aliquam omnis quis molestiae consectetur id eveniet necessitatibus nisi?</p>
 </body>
 </html>
